/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
	// Apply the java-library plugin to add support for Java Library
	id 'eclipse'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.9'
}

javafx {
	version = "15.0.1"
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.graphics']
}

repositories {
// Use jcenter for resolving dependencies.
// You can declare any Maven/Ivy/file repository here.
	jcenter()
}

sourceCompatibility = 11
targetCompatibility = 11
mainClassName = "Launcher"
